--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liascript-exporter",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "An generic exporter for LiaScript",
   "main": "src/index.js",
   "bin": {
@@ -11,7 +11,7 @@
   "scripts": {
     "__preinstall": "cd LiaScript && npm i && npm run build:scorm1.2 && cp -r dist ../assets/scorm1.2",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx parcel build --target node --no-minify --no-source-maps node src/index.js",
+    "build": "npx parcel build --target node --no-source-maps node src/index.js",
     "build:debug": "npx parcel build --target node --no-minify --log-level 5 src/index.js",
     "build:assets": "npm run asset:scorm1.2 && npm run asset:web",
     "asset:scorm1.2": "cd LiaScript && npm i && npm run build:scorm1.2 && cp -r dist ../dist/assets/scorm1.2",
@@ -31,6 +31,15 @@
     "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git"
   },
   "devDependencies": {
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "parcel-plugin-shebang": "^1.2.8"
+  },
+  "shebang": [
+  {
+    "interpreter": "node",
+    "files": [
+      "./src/index.js"
+    ]
   }
+]
 }
