--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "minimist": "^1.2.5",
     "path": "^0.12.7",
     "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git",
-    "xhr2": "^0.2.0",
-    "xmlhttprequest": "^1.8.0"
+    "temp": "^0.9.1",
+    "xhr2": "^0.2.0"
   },
   "devDependencies": {
     "parcel": "^1.12.4",
