--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liascript/exporter",
-  "version": "1.0.41--0.9.29",
+  "version": "1.0.42--0.9.29",
   "description": "A generic exporter for LiaScript",
   "main": "dist/index.js",
   "repository": {
@@ -38,14 +38,14 @@
   "dependencies": {
     "fs-extra": "^9.0.1",
     "path": "^0.12.7",
-    "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git",
     "temp": "^0.9.1",
     "xhr2": "^0.2.0"
   },
   "devDependencies": {
     "minimist": "^1.2.5",
     "parcel": "^1.12.4",
-    "parcel-plugin-shebang": "^1.3.0"
+    "parcel-plugin-shebang": "^1.3.0",
+    "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git"
   },
   "shebang": [
     {
