--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
   "dependencies": {
     "fs-extra": "^9.0.1",
     "path": "^0.12.7",
+    "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git",
     "temp": "^0.9.1",
     "xhr2": "^0.2.0"
   },
   "devDependencies": {
     "minimist": "^1.2.5",
     "parcel": "^1.12.4",
-    "parcel-plugin-shebang": "^1.3.0",
-    "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git"
+    "parcel-plugin-shebang": "^1.3.0"
   },
   "shebang": [
     {
