--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clean": "rm -rf dist/assets/*",
     "asset:web": "cd LiaScript && npm i && npm run build:base && cp -r dist ../dist/assets/web",
     "asset:scorm1.2": "cd LiaScript && npm i && npm run build:scorm1.2 && cp -r dist ../dist/assets/scorm1.2",
-    "build": "npx parcel build --target node --no-source-maps node src/index.ts",
+    "build": "npx parcel build --target node --no-source-maps src/index.ts",
     "build:debug": "npx parcel build --target node --no-minify --log-level 5 src/index.ts"
   },
   "keywords": [
