--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liascript/exporter",
-  "version": "1.0.48--0.9.40",
+  "version": "1.0.49--0.9.40-r1",
   "description": "A generic exporter for LiaScript",
   "main": "dist/index.js",
   "repository": {
@@ -38,7 +38,7 @@
   "dependencies": {
     "fs-extra": "^9.1.0",
     "path": "^0.12.7",
-    "simple-scorm-packager": "git+https://github.com/andre-dietrich/simple-scorm-packager.git",
+    "simple-scorm-packager": "https://github.com/andre-dietrich/simple-scorm-packager",
     "temp": "^0.9.4",
     "xhr2": "^0.2.1"
   },
