--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liascript/exporter",
-  "version": "1.0.49--0.9.40-r1",
+  "version": "1.0.49--0.9.40-r3",
   "description": "A generic exporter for LiaScript",
   "main": "dist/index.js",
   "repository": {
@@ -36,9 +36,9 @@
   "author": "André Dietrich",
   "license": "ISC",
   "dependencies": {
+    "@liascript/simple-scorm-packager": "^0.2.5",
     "fs-extra": "^9.1.0",
     "path": "^0.12.7",
-    "simple-scorm-packager": "https://github.com/andre-dietrich/simple-scorm-packager",
     "temp": "^0.9.4",
     "xhr2": "^0.2.1"
   },
