--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "clean": "rm -rf dist/assets/*",
     "asset:web": "cd LiaScript && npm i && npm run build:base && cp -r dist ../dist/assets/web",
     "asset:scorm1.2": "cd LiaScript && npm i && npm run build:scorm1.2 && cp -r dist ../dist/assets/scorm1.2",
-    "build": "npx parcel build --target node --no-source-maps src/index.ts",
-    "build:debug": "npx parcel build --target node --no-minify --log-level 5 src/index.ts"
+    "build": "npx parcel build --no-source-maps src/index.ts",
+    "build:debug": "npx parcel build --target node --no-minify --log-level 5 src/index.ts",
+
+    "run:moodle": "cd docker/moodle && docker-compose up"
   },
   "keywords": [
     "LiaScript",
@@ -38,22 +40,20 @@
   "dependencies": {
     "@liascript/simple-scorm-packager": "^0.2.5",
     "fs-extra": "^9.1.0",
+    "minimist": "^1.2.5",
     "path": "^0.12.7",
     "temp": "^0.9.4",
     "xhr2": "^0.2.1"
   },
   "devDependencies": {
-    "minimist": "^1.2.5",
-    "parcel": "^1.12.4",
-    "parcel-plugin-shebang": "^1.3.3",
+    "@parcel/transformer-elm": "^2.2.1",
+    "@types/fs-extra": "^9.0.13",
+    "@types/temp": "^0.9.1",
+    "elm": "^0.19.1-5",
+    "parcel": "^2.2.1",
     "typescript": "^4.3.5"
   },
-  "shebang": [
-    {
-      "interpreter": "node",
-      "files": [
-        "./src/index.ts"
-      ]
-    }
-  ]
+  "engines": {
+    "node": ">= 12"
+  }
 }
