--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "asset:pdf": "cd LiaScript && git checkout feat/fullPage && npm i && npm run build:pdf && cp -r dist ../dist/assets/pdf && git checkout development",
     "asset:scorm1.2": "cd LiaScript && npm i && npm run build:scorm1.2 && cp -r dist ../dist/assets/scorm1.2",
     "asset:scorm2004": "cd LiaScript && npm i && npm run build:scorm2004 && cp -r dist ../dist/assets/scorm2004",
-    "build": "npx parcel build --no-source-maps src/index.ts",
+    "build": "npx parcel build --no-scope-hoist --log-level verbose src/index.ts",
     "build:debug": "npx parcel build --target node --no-minify --log-level 5 src/index.ts",
     "run:moodle": "cd docker/moodle && docker-compose up",
     "run:ilias": "cd docker/ilias && docker-compose up"
@@ -49,11 +49,11 @@
     "xhr2": "^0.2.1"
   },
   "devDependencies": {
-    "@parcel/transformer-elm": "^2.2.1",
+    "@parcel/transformer-elm": "^2.3.1",
     "@types/fs-extra": "^9.0.13",
     "@types/temp": "^0.9.1",
     "elm": "^0.19.1-5",
-    "parcel": "^2.2.1",
+    "parcel": "^2.3.1",
     "typescript": "^4.3.5"
   },
   "engines": {
