--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "author": "André Dietrich",
   "license": "ISC",
   "dependencies": {
+    "@capacitor/android": "^3.4.1",
     "@liascript/simple-scorm-packager": "^0.2.6",
     "archiver": "^5.3.0",
     "fs-extra": "^9.1.0",
@@ -52,6 +53,7 @@
     "xhr2": "^0.2.1"
   },
   "devDependencies": {
+    "@capacitor/cli": "^3.4.1",
     "@parcel/transformer-elm": "^2.3.1",
     "@types/fs-extra": "^9.0.13",
     "@types/temp": "^0.9.1",
