feat: Add basic RDF-support

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "@liascript/simple-scorm-packager": "^0.3.0",
     "archiver": "^5.3.0",
     "fs-extra": "^9.1.0",
+    "jsonld": "^8.1.1",
     "minimist": "^1.2.5",
+    "node-fetch": "^2.6.9",
     "path": "^0.12.7",
     "puppeteer": "^19.2.2",
     "temp": "^0.9.4",
