improve: Project with pretty HTML output

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@liascript/simple-scorm-packager": "^0.3.0",
     "archiver": "^5.3.0",
+    "clean-html": "^1.5.0",
     "fs-extra": "^9.1.0",
     "jsonld": "^8.1.1",
     "minimist": "^1.2.5",
