fix: html cleaning & add json-ld to web output

--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
   "dependencies": {
     "@liascript/simple-scorm-packager": "^0.3.0",
     "archiver": "^5.3.0",
-    "clean-html": "^1.5.0",
     "fs-extra": "^9.1.0",
     "jsonld": "^8.1.1",
     "minimist": "^1.2.5",
     "node-fetch": "^2.6.9",
     "path": "^0.12.7",
     "puppeteer": "^19.2.2",
+    "simply-beautiful": "^0.2.14",
     "temp": "^0.9.4",
     "xhr2": "^0.2.1",
     "yaml": "^2.1.3"
