--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:debug": "npx parcel build --target node --no-minify --log-level 5 src/index.ts",
     "run:moodle": "cd docker/moodle && docker-compose up",
     "run:ilias": "cd docker/ilias && docker-compose up",
-    "fix:file": "sh -c 'find dist/ -type f -name \"*.js\" -exec sed -i \"s/\\(https\\?|file\\|ftp\\|(chrome\\|moz\\|safari-web\\)-extension\\):\\/\\/[^/]\\+/\\1:\\/\\/?[^/]\\+/g\" {} +'",
+    "fix:file": "find dist/ -type f -name \"*.js\" -exec sed -i -r 's/\\/\\(https\\?\\|file\\|ftp\\|\\(chrome\\|moz\\|safari-web\\)-extension\\):\\\\\\/\\\\\\/\\[/\\/(https?|file|ftp|(chrome|moz|safari-web)-extension):\\\\\\/\\\\\\/\\\\\\/?[/g' {} +",
     "shebang": "sed  -i '1i #!/usr/bin/env node\\n' dist/index.js && chmod +x dist/index.js",
     "minify": "find dist -name \"*.js\" -print0 | xargs -0 -P 4 -I {} sh -c 'before=$(wc -c < {}); minify {} > {}.min && after=$(wc -c < {}.min); if [ ${after} -lt ${before} ]; then mv {}.min {}; reduction=$((${before}-${after})); percent=$(awk \"BEGIN {printf \\\"%.2f\\\", ${reduction}/${before}*100}\"); echo \"{} reduced from ${before} to ${after} bytes (${percent}% reduction)\"; else rm {}.min; echo \"{} no reduction achieved, file size unchanged\"; fi'"
   },
