--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liascript/exporter",
-  "version": "2.6.33--0.16.11",
+  "version": "2.6.34--0.16.11",
   "description": "A generic exporter for LiaScript",
   "main": "dist/index.js",
   "repository": {
@@ -18,6 +18,7 @@
   },
   "preferGlobal": true,
   "scripts": {
+    "postinstall": "npx puppeteer browsers install chrome",
     "__preinstall": "cd LiaScript && npm i && npm run build:scorm1.2 && cp -r dist ../assets/scorm1.2",
     "build:assets": "npm run clean && npm run asset:scorm1.2 && npm run asset:scorm2004 && npm run asset:web && npm run asset:indexeddb && npm run asset:pdf && npm run asset:capacitor && npm run asset:logo",
     "clean": "rm -rf dist/assets/*",
