--- a/package.json
+++ b/package.json
@@ -50,25 +50,25 @@
   "license": "ISC",
   "dependencies": {
     "@liascript/simple-scorm-packager": "^0.3.0",
-    "archiver": "^5.3.0",
-    "fs-extra": "^9.1.0",
-    "jsonld": "^8.1.1",
+    "@types/fs-extra": "^11.0.4",
+    "archiver": "^7.0.1",
+    "fs-extra": "^11.3.2",
+    "jsonld": "^9.0.0",
     "minimist": "^1.2.5",
-    "node-fetch": "^2.6.9",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
-    "puppeteer": "^23.7.0",
-    "simply-beautiful": "^0.2.14",
+    "puppeteer": "^24.31.0",
+    "simply-beautiful": "^1.0.1",
     "temp": "^0.9.4",
+    "typescript": "^5.9.3",
     "xhr2": "^0.2.1",
-    "yaml": "^2.1.3"
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@parcel/transformer-elm": "^2.8.0",
-    "@types/fs-extra": "^9.0.13",
     "@types/temp": "^0.9.1",
     "elm": "^0.19.1-5",
-    "parcel": "^2.8.0",
-    "typescript": "^4.3.5"
+    "parcel": "^2.8.0"
   },
   "engines": {
     "node": ">= 12"
